test/e2e/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/POST__api_atlas_v2_groups_5efda6aea3f2ed2e7dd6ce05_databaseUsers_3.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 31 Mar 2025 12:45:35 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="T0JLLt8uG6BJuazN03jNqG1tbkTWEL0z", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 5

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}